--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ jobs:
       language: shell
 
 install:
-  - pip install codecov
-  - pip install coveralls
+  #- pip install codecov
+  #- pip install coveralls
   - pip install pytest pytest-cov
 
 script:
@@ -18,4 +18,4 @@ script:
 
 after_success:
   - codecov
-  - coveralls
+  #- coveralls
